pod-livenessprob.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: dev
  name: kubia-liveness
spec:
  containers:
  - image: luksa/kubia-unhealthy
    name: kubia
    livenessProbe:
      httpGet:
        path: /
        port: 8080
        failureThreshold: 2
    ReadinessProbe:
      httpGet:
        path: /
        port: 8080
        failureThreshold: 2
