pod-uat.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-manual
  namespace: uat
  labels:
    Role: "python"
spec:
  containers:
  - image: luksa/kubia
    name: kubia
    ports:
    - containerPort: 8080
      protocol: TCP
