kubia-svc-env-eks-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-env-1
  namespace: dev
spec:
  type: ClusterIP
  ports:
  - name: http
    targetPort: 5000
    port: 80
  selector:
    app: kubia-env
