kubia-svc-env.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-env
  namespace: dev
spec:
  type: NodePort
  ports:
  - name: http
    targetPort: 5000
    port: 80
    nodePort: 30124
  selector:
    app: kubia-env
