kubia-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
  namespace: dev
spec:
  type: LoadBalancer
  ports:
  - name: http
    targetPort: 80
    port: 80
    nodePort: 30123
  selector:
    app: kubia
