kubia-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia
spec:
  rules:
  - host: kubia.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubia
          servicePort: 80
  - host: kubia-1.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubia-2
          servicePort: 80
